# unbreakable-eye

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
infra/docker/: Dockerfile
src/core/: config.py  logging.py
src/engine/: pipeline.py
src/server/: main.py
src/vision/: base.py  factory.py
src/vision/models/: hf.py  openvino.py  ultralytics_yolo.py  yolox.py
